k8s/deployment-drink.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drink-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drink-app
  template:
    metadata:
      labels:
        app: drink-app
    spec:
      containers:
      - name: drink-app
        image: admekb/admekb_drink:latest
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /drink
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
