k8s/service-drink.yaml
apiVersion: v1
kind: Service
metadata:
  name: drink-service
spec:
  selector:
    app: drink-app
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
